# budget-tracker-in-rust

./: .env  .gitignore  Cargo.toml  database.db  diesel.toml  readme  readme.md  task.json
migrations/2025-04-03-124921_budget/: down.sql  up.sql
migrations/2025-04-04-031523_users/: down.sql  up.sql
migrations/2025-04-06-040413_transactions/: down.sql  up.sql
src/: main.rs  schema.rs
src/auth/: mod.rs  session.rs
src/budget/: mod.rs  transaction.rs
src/database/: mod.rs  models.rs
